[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automata-py"
authors = [{name = "Roy Levien", email = "royl@msn.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Education",
    "Environment :: Console"
]
dynamic = ["version", "description"]
requires-python = ">=3.10,<4"
dependencies = [
    "numpy >=1.26",
    "matplotlib >=3.8"
]

[tool.flit.module]
name = "automata"
include = ["automata_cli.py"]

[project.scripts]
automata = "automata_cli:cli"

#[tool.flit.sdist]
#include = ["docs/readme_eg.png"]

[project.urls]
Home = "https://github.com/orome/automata-py"

[project.optional-dependencies]
notebook = ["ipywidgets", "IPython"]
cli = ["click"]
all = ["ipywidgets", "IPython", "click"]
